--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -274,8 +274,8 @@ p a {
 }
 
 #intro {
-    padding:2rem 0 2rem 0;
     margin:0;
+    padding-top:2rem;
 }
 
 .locked {
@@ -327,7 +327,7 @@ p a {
 
 /* Footer */
 footer {
-    margin-top: 10rem;
+    margin-top: 5rem;
 }
 
 footer div {
